--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,18 +1,11 @@
-#title-table {  /* TÍTULO DA LISTA, INDEX */
-    font-family: 'Times New Roman', Times, serif;
-}
 #jumbotron { /* CAIXA TEXTO PRINCIPAL INDEX */
     background-color: #003669!important;
-}
-
-#titlejumbo { /* ALTERANDO APENAS O TÍTULO DENTRO DA CAIXA DE TEXTO DO INDEX */
-    font-family: Georgia, Times, 'Times New Roman', serif;
-    font-style: italic;
-}
-#titleform { /* TITULO GUIA CONTATO */
-    font-family: Georgia, Times, 'Times New Roman', serif;
 }
 .map-container iframe{
     height:100%;
     width:100%;
+    padding: 0%
+}
+h1, h2, h5 {
+    font-family: Georgia, Times, 'Times New Roman', serif;
 }
